--- a/src/Views/layouts/base.twig
+++ b/src/Views/layouts/base.twig
@@ -1,4 +1,3 @@
-{# src/Views/layouts/base.twig #}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -7,23 +6,19 @@
 
     {# CSS global #}
     <link rel="stylesheet" href="/assets/css/global.css">
-    
+    {# CSS do header (agora carregado antes de tudo) #}
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     {% block styles %}{% endblock %}
-    
 </head>
-<body class="flex flex-col min-h-screen">
+<body>
 
-    {# Header include corrigido #}
-    {% include 'layouts/header.twig' %}
+    {% include 'layouts/partial/header.twig' %}
 
-    <main class="flex-grow container mx-auto p-4">
+    <main>
         {% block content %}{% endblock %}
     </main>
 
-    {# Footer include opcional #}
-    {% include 'layouts/footer.twig' %}
-
-    {# JS global #}
+    {% include 'layouts/partial/footer.twig' %}
     <script src="/assets/js/global.js"></script>
     {% block scripts %}{% endblock %}
 </body>
